--- a/public/lang/cn-tr/credits/index.html
+++ b/public/lang/cn-tr/credits/index.html
@@ -80,7 +80,7 @@
 									<li>
 										<a href="/lang/ru" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> Русский </a>
 									</li>
-									<li>
+									<li class="hidden">
 										<a href="/lang/jp" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> 日本語 </a>
 									</li>
 									<li>
@@ -159,7 +159,7 @@
 							<a href="/lang/cn">简体中文</a>
 							<a href="/lang/ru">Pусский</a>
 							<a href="/lang/de">Deutsch</a>
-							<a href="/lang/jp">ホーム </a>
+							<a href="/lang/jp" class="hidden">ホーム </a>
 							<a href="/lang/es">Español</a>
 							
 							<a href="/lang/kr">한국어</a>
@@ -207,7 +207,7 @@
 						</div>
 
 						<!-- product manager -->
-						<div class="space-x-1 flex items-start md:items-center">
+						<div class="hidden space-x-1 items-start md:items-center">
 							<!-- icon -->
 							<div class="flex items-start md:items-center space-x-1">
 								<svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -480,7 +480,7 @@
 							</div>
 
 							<!-- commercial agent -->
-							<div class="flex flex-col items-center text-white">
+							<div class="hidden  flex-col items-center text-white">
 								<svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
 								</svg>
