--- a/public/lang/id/index.html
+++ b/public/lang/id/index.html
@@ -28,10 +28,10 @@
 
 	<body class="flex flex-col h-screen justify-between bg-gray-100 dark:bg-[#171717] font-montserrat transition duration-200 ease-in-out">
 		<!-- nav bar -->
-		<nav class="max-w-screen px-6 lg:pr-12 lg:pl-14 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-white dark:bg-[#141414] transition duration-200 ease-in-out filter drop-shadow-md z-40">
+		<nav class="max-w-screen px-6 lg:pr-12 lg:pl-3 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-white dark:bg-[#141414] transition duration-200 ease-in-out filter drop-shadow-md z-40">
 			<div class="flex justify-between">
 				<!-- logo -->
-				<div class="flex items-center lg:mr-10 xl:pl-10">
+				<div class="flex items-center lg:mr-2 xl:pl-10">
 					<a href="./" class="flex items-center">
 						<img class="h-9 rounded-lg" src="/assets/logo.svg" alt="" />
 						<span class="text-2xl pl-2 bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text font-semibold">PlayCover</span>
@@ -40,13 +40,13 @@
 
 				<!-- primary nav -->
 				<div class="hidden xl:flex items-center space-x-10 pt-1 text-[1.05rem]">
-					<a href="./" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> Home </a>
+					<a href="./" class="w-20 text-yellow-500 border-b-2 border-yellow-500 py-3"> Halaman Utama </a>
 					<!-- download nav download -->
-					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.7.3/PlayCover.0.7.3.zip" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Download </a>
-					<a href="./changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Changelog </a>
-					<a href="./faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> FAQ </a>
-					<a href="./credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Credits </a>
-					<button class="contact-nav-button text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">Contact Us</button>
+					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.7.3/PlayCover.0.7.3.zip" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Unduhan </a>
+					<a href="./changelog/" class="w-24 text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Sejarah Perubahan </a>
+					<a href="./faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Pertanyaan umum </a>
+					<a href="./credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Kredit </a>
+					<button class="contact-nav-button text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">Pesan Bantuan</button>
 				</div>
 
 				<!-- secondary nav -->
@@ -55,7 +55,7 @@
 					<div class="relative">
 						<div class="h-[3.5rem] flex items-center">
 							<button class="group donate-nav-button border-b-2 border-yellow-500 hover:border-b-4 bg-yellow-400 dark:bg-[#791c0c] dark:border-[#410e05] active:border-none rounded-md px-3 py-[0.29rem] transition duration-100 ease-linear md:hover:translate-y-[-0.15rem]">
-								<span class="text-[1.05rem] text-white transition-colors duration-200"> Donate </span>
+								<span class="text-[1.05rem] text-white transition-colors duration-200"> Donasi </span>
 							</button>
 						</div>
 					</div>
@@ -65,7 +65,7 @@
 						<li class="relative text-[1.05rem]">
 							<!-- language btn -->
 							<button class="language-button flex items-center space-x-1 border border-gray-500 dark:border-gray-400 rounded-md px-3 py-1 transition-colors duration-200 group hover:border-yellow-600 dark:hover:border-yellow-500">
-								<span class="text-gray-800 dark:text-gray-300 transition-colors duration-200 group-hover:text-yellow-600 dark:group-hover:text-yellow-500"> English </span>
+								<span class="text-gray-800 dark:text-gray-300 transition-colors duration-200 group-hover:text-yellow-600 dark:group-hover:text-yellow-500 text-sm"> Bahasa Indonesia </span>
 								<!-- icon -->
 								<div class="">
 									<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 transition duration-200 dark:text-gray-300 group-hover:text-yellow-600 dark:group-hover:text-yellow-500 transform language-menu-icon" fill="none" viewbox="0 0 24 24" stroke="currentColor">
@@ -84,14 +84,14 @@
 									<li>
 										<a href="/lang/ru" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> Русский </a>
 									</li>
-									<li>
+									<li class="hidden">
 										<a href="/lang/jp" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> 日本語 </a>
 									</li>
 									<li>
 										<a href="/lang/de" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> Deutsch </a>
 									</li>
 									<li>
-										<a href="/lang/id" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> Bahasa Indonesia </a>
+										<a href="/lang/id" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> English </a>
 									</li>
 
 									<li>
@@ -140,16 +140,16 @@
 			<!-- mobile menu -->
 			<div class="mobile-menu max-h-[85vh] overflow-auto hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
-					<a href="./" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Home</a>
-					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.6.2/PlayCover.0.6.2.zip" class="block text-gray-600 dark:text-gray-300">Download</a>
-					<a href="./changelog/" class="block text-gray-600 dark:text-gray-300">Changelog</a>
-					<a href="./faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
-					<a href="./credits/" class="block text-gray-600 dark:text-gray-300">Credits</a>
-					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Contact Us</button>
+					<a href="./" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Halaman Utama</a>
+					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.6.2/PlayCover.0.6.2.zip" class="block text-gray-600 dark:text-gray-300">Unduhan</a>
+					<a href="./changelog/" class="block text-gray-600 dark:text-gray-300">Sejarah Perubahan</a>
+					<a href="./faq/" class="block text-gray-600 dark:text-gray-300">Pertanyaan umum</a>
+					<a href="./credits/" class="block text-gray-600 dark:text-gray-300">Kredit</a>
+					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Pesan Bantuan</button>
 
 					<!-- mobile language button -->
 					<button class="mobile-language-button text-gray-600 dark:text-gray-300 flex items-center space-x-1">
-						<p class="pl-3">English</p>
+						<p class="pl-3">Bahasa Indonesia</p>
 						<!-- icon -->
 						<div class="pt-0">
 							<svg xmlns="http://www.w3.org/2000/svg" class="mobile-lang-icon transform h-5 w-5 transition-colors duration-200 group-hover:text-pink-500" fill="none" viewbox="0 0 24 24" stroke="currentColor">
@@ -164,15 +164,15 @@
 							<a href="/lang/cn">简体中文</a>
 							<a href="/lang/ru">Pусский</a>
 							<a href="/lang/de">Deutsch</a>
-							<a href="/lang/jp">ホーム </a>
+							<a href="/lang/jp" class="hidden">ホーム </a>
 							<a href="/lang/es">Español</a>
 							
 							<a href="/lang/kr">한국어</a>
-							<a href="/lang/id" class="flex flex-col items-center justify-center">Bahasa <span>Indonesia</span> </a>
+							<a href="/" class="flex flex-col items-center justify-center">English </a>
 						</div>
 					</div>
 
-					<button class="mobile-donate-button block text-gold">Donate</button>
+					<button class="mobile-donate-button block text-gold">Donasi</button>
 				</div>
 			</div>
 		</nav>
@@ -192,18 +192,18 @@
 						<h1 class="font-extrabold text-[48px] bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">PlayCover</h1>
 
 						<!-- hero text -->
-						<p class="md:pl-1 max-w-xs md:max-w-sm pt-6 md:pt-0 text-center md:text-left text-lg">allows you to run iOS apps on your Mac in fullscreen with Mouse, Keyboard & Controller.</p>
+						<p class="md:pl-1 max-w-xs md:max-w-sm pt-6 md:pt-0 text-center md:text-left text-lg">memungkinkan Anda menjalankan aplikasi iOS di Mac dalam layar penuh dengan Mouse, Keyboard & Controller.</p>
 
-						<!-- Download buttons -->
+						<!-- Unduhan buttons -->
 						<div class="flex flex-col lg:flex-row space-y-6 lg:space-y-0 lg:space-x-4 pt-8 lg:pt-6 items-center text-center">
 							<!-- M1 -->
 							<div class="flex items-center md:h-10 md:w-52">
-								<a class="py-2 px-4 drop-shadow-sm bg-yellow-500 dark:bg-[#791c0c] text-white dark:text-gray-200 rounded-md cursor-pointer border-b-2 md:hover:border-b-4 border-yellow-600 md:hover:translate-y-[-0.15rem] active:border-none dark:border-[#410e05] dark:active:border-none transition duration-100 ease-linear" href="https://github.com/Letscoder/PlayCover/releases/download/0.7.3/PlayCover.0.7.3.zip"> Download for M1 Mac </a>
+								<a class="py-2 px-4 drop-shadow-sm bg-yellow-500 dark:bg-[#791c0c] text-white dark:text-gray-200 rounded-md cursor-pointer border-b-2 md:hover:border-b-4 border-yellow-600 md:hover:translate-y-[-0.15rem] active:border-none dark:border-[#410e05] dark:active:border-none transition duration-100 ease-linear" href="https://github.com/Letscoder/PlayCover/releases/download/0.7.3/PlayCover.0.7.3.zip"> Unduhan for M1 Mac </a>
 							</div>
 
 							<!-- intel -->
 							<div class="flex items-center">
-								<a class="py-2 px-4 cursor-default bg-gray-200 dark:bg-[#272727] text-gray-400 dark:text-[#494949] transition-colors duration-200 rounded-md" href="#"> Download for Intel Mac </a>
+								<a class="py-2 px-4 cursor-default bg-gray-200 dark:bg-[#272727] text-gray-400 dark:text-[#494949] transition-colors duration-200 rounded-md" href="#"> Unduhan for Intel Mac </a>
 
 								<!-- coming soon text -->
 								<div class="relative text-gray-50 dark:text-gray-200">
@@ -216,25 +216,25 @@
 					<!-- build text -->
 					<div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[17.5rem] 2xl:max-h-[25rem] w-[27.7rem] cursor-default border-2 dark:border-[#3d3d3d] hover:border-transparent dark:hover:border-transparent hover:shadow-lg hover:bg-white dark:hover:bg-[#363636] transition-all duration-300">
 						<div class="mt-6 mb-[24px] ml-8 mr-2 pr-2 overflow-hidden group-hover:overflow-y-auto text-gray-400 dark:text-[#636363] group-hover:text-gray-800 dark:group-hover:text-gray-200 transition-all duration-300 relative">
-							<h2 class="font-medium text-lg pb-4">Latest Update Info (0.7.3)</h2>
+							<h2 class="font-medium text-lg pb-4">Update info terbaru (0.7.3)</h2>
 
 							<ul class="text-sm space-y-4">
-								<li>Game controller key mapping for games that don’t support gamepads (NOTICE: Genshin Impact's native controller support is not working for now)</li>
-								<li>Fixed bug of mouse reset on Burst (Ultimate) in Genshin Impact</li>
-								<li>Smoother mouse movement</li>
-								<li>Fixed improper scaling in Windowed mode (edited)</li>
-								<li>App launcher now allows you run apps directly from PlayCover</li>
-								<li>With 'Update PlayTools' context-menu option you can install new versions of in-game controls without reinstalling the whole app</li>
-								<li>If something goes wrong, you can erase PlayTools settings with 'Reset PlayTools settings' option instead of whole app cache clear</li>
-								<li>'Downloads' tab of sidebar contains links for latest decrypted app versions (I will extended this list and make this dynamic next update)</li>
-								<li>Fixed error with iCloud / Dropbox documents syncing folders</li>
-								<li>Now sidebar has fixed min width and also app has new minimum size</li>
-								<li>Improved downloads UI, so it will provide download link based on your region</li>
-								<li>Improved Settings Ui, so now you can copy the command</li>
-								<li>Multi-lang Support</li>
-								<li>Fixed crash on startup for some users</li>
-								<li>Now Alt/Option button also hides/shows menu bar, so you can easily access settings of Window control buttons</li>
-								<li>PlayCover shows a notification when finished installing an app</li>
+								<li>Mapping controller game untuk beberapa game yang tidak mendukung penggunaan controller (saat ini dukungan native controller belum tersedia)</li>
+								<li>Bug mouse yang tidak responsif setelah Burst di Genshin Impact sudah diperbaiki.</li>
+								<li>Pergerakkan mouse yang lebih halus.</li>
+								<li>Perbaikkan scaling resolusi saat di mode Windowed.</li>
+								<li>Launcher aplikasi sekarang dapat menjalankan aplikasi yang terinstall secara langsung.</li>
+								<li>Dengan opsi ‘Update Playtools’ dalam konteks menu, dapat digunakan untuk menginstall control versi terbaru tanpa harus menginstall ulang seluruh aplikasi.</li>
+								<li>Jika bermasalah, dapat dilakukan penghapusan data pengaturan Playtools dengan opsi “Reset Playtools”, daripada menghapus seluruh cache aplikasi.</li>
+								<li>Tab ‘Unduhan’ berisi link untuk mengunduh versi aplikasi  terbaru yang sudah di dekripsi (Kedepannya akan di update secara berkala)</li>
+								<li>Error sinkronisasi folder pada Icloud/Dropbox sudah diperbaiki.</li>
+								<li>Ukuran sidebar dan ukuran aplikasi sudah diperbaiki.</li>
+								<li>Tampilan unduhan yang ditingkatkan, link unduhan akan otomatis mengikuti region pengguna.</li>
+								<li>Tampilang pengaturan yang ditingkatkan, dapat langsung melakukan copy command.</li>
+								<li>Dukungan banyak Bahasa.</li>
+								<li>Crash saat menjalakan aplikasi sudah diperbaiki.</li>
+								<li>Tombol Alt juga dapat digunakan untuk memunculkan/menyembunyikan bar menu, jadi akan lebih mudah untuk mengakses jendela pengaturan control.</li>
+								<li>Playcover akan memberikan notifikasi saat selesai melakukan penginstallan.</li>
 							</ul>
 						</div>
 					</div>
@@ -361,7 +361,7 @@
 					</div>
 
 					<!-- text -->
-					<p class="pt-12 pb-8 font-light text-white text-3xl">Donate via...</p>
+					<p class="pt-12 pb-8 font-light text-white text-3xl">Donasi melalui...</p>
 
 					<!-- donate options -->
 					<div class="flex items-center pb-4 space-x-4 px-8 lg:px-0">
@@ -460,7 +460,7 @@
 							</div>
 
 							<!-- commercial agent -->
-							<div class="flex flex-col items-center text-white">
+							<div class="hidden  flex-col items-center text-white">
 								<svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
 								</svg>
@@ -481,18 +481,18 @@
 					<!-- text -->
 					<div class="pt-6 md:pt-0 flex flex-col space-y-1">
 						<!-- logo -->
-						<h1 class="font-semibold text-xl bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">A PlayCover Team Product</h1>
+						<h1 class="font-semibold text-xl bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">Produk Tim PlayCover</h1>
 
 						<!-- alex credits -->
 						<div class="relative">
 							<!-- placeholder -->
-							<p class="text-lg text-transparent transition duration-200 ease-in-out">Presented by <span class="font-neon font-medium">Alexandr Dorofeev</span></p>
+							<p class="text-lg text-transparent transition duration-200 ease-in-out">Disajikan oleh <span class="font-neon font-medium">Alexandr Dorofeev</span></p>
 
 							<!-- text -->
-							<p class="text-lg absolute inset-0 z-30 transition duration-200 ease-in-out">Presented by <span class="text-pink-600 dark:text-gray-300 transition duration-200 ease-in-out font-neon font-medium">Alexandr Dorofeev</span></p>
+							<p class="text-lg absolute inset-0 z-30 transition duration-200 ease-in-out">Disajikan oleh <span class="text-pink-600 dark:text-gray-300 transition duration-200 ease-in-out font-neon font-medium">Alexandr Dorofeev</span></p>
 
 							<!-- bg blur -->
-							<p class="text-lg text-transparent bg-gradient-to-r absolute inset-0 blur-sm dark:text-transparent transition duration-200 ease-in-out">Presented by <span class="text-pink-100 dark:text-red-600 transition duration-200 ease-in-out font-neon font-medium">Alexandr Dorofeev</span></p>
+							<p class="text-lg text-transparent bg-gradient-to-r absolute inset-0 blur-sm dark:text-transparent transition duration-200 ease-in-out">Disajikan oleh <span class="text-pink-100 dark:text-red-600 transition duration-200 ease-in-out font-neon font-medium">Alexandr Dorofeev</span></p>
 						</div>
 					</div>
 
@@ -532,7 +532,7 @@
 					<!-- legal notice and copyright claim -->
 					<div class="flex items-center">
 						<a href="./legal-notice/" pr-4 hidden hover:text-yellow-500 underline text-left">Legal Notice</a>
-						<a href="mailto:write2me4help@gmail.com" class="underline hover:text-yellow-500">Copyright Claims</a>
+						<a href="mailto:write2me4help@gmail.com" class="underline hover:text-yellow-500">Klaim Hak Cipta</a>
 					</div>
 
 					<p class="inline">Copyright © 2021 Alexandr Dorofeev. All rights reserved.</p>
